07-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: env-demo
spec:
  containers:
  - name: debug
    image: rkalluru/debug
