09-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo-1
spec:
  containers:
  - name: debug
    image: rkalluru/debug
