12-rbac.yml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-demo
spec:
  serviceAccountName: example
  containers:
  - name: debug
    image: rkalluru/debug
