15-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-12
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1%
      maxUnavailable: 1%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1:15
        ports:
        - containerPort: 80
