16-vpa.yml
# git clone https://github.com/kubernetes/autoscaler.git
# cd autoscaler/vertical-pod-autoscaler
# bash ./pkg/admission-controller/gencerts.sh
# bash ./hack/vpa-up.sh


apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-16
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1%
      maxUnavailable: 1%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: hpa
        image: rkalluru/debug:hpa
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 200m
            memory: 1000Mi
