05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cip
spec:
  selector:
    appName: nginx
    demoFor: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-cip
  labels:
    appName: nginx
    demoFor: ClusterIP
spec:
  containers:
  - name: nginx
    image: nginx:1.19
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  type: NodePort
  selector:
    appName: nginx
    demoFor: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  type: LoadBalancer
  selector:
    appName: nginx
    demoFor: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
