13-network-policy.yml
## Without Network Policy
apiVersion: v1
kind: Pod
metadata:
  name: nginx-13-np
  labels:
    podName: nginx-13-np
spec:
  containers:
  - name: nginx
    image: nginx:1.19
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-13-np
spec:
  selector:
    podName: nginx-13-np
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-13-np
spec:
  containers:
  - name: debug
    image: rkalluru/debug


## With Network Policy restricting from same namespace
