istio-setup.yml
# helm repo add istio https://istio-release.storage.googleapis.com/charts
# helm repo update
# helm install istio-base istio/base -n istio-system --set defaultRevision=default --create-namespace
# helm install istiod istio/istiod -n istio-system --wait
# kubectl apply -f https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/addons/kiali.yaml
# kubectl apply -f https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/addons/prometheus.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: kiali-dev.azdevopsb82.online
    http:
      paths:
      - backend:
          service:
            name: kiali
            port:
              number: 20001
        path: /
        pathType: Prefix
